Add new gallery images to enhance visual content on the website

--- a/index.html
+++ b/index.html
@@ -163,23 +163,23 @@
         <section id="products" class="section-fade-in">
             <div class="text-center mb-12">
                 <h2 class="playfair text-3xl md:text-4xl font-bold text-green-800 mb-4" data-lang-en="Our Premium Gambela Exports" data-lang-am="የእኛ ዋና የጋምቤላ ምርቶች">Our Premium Gambela Exports</h2>
-                <p class="max-w-2xl mx-auto text-gray-600" data-lang-en="From staple grains to specialty goods, our products are a testament to Gambela's rich soil and ideal climate." data-lang-am="ከዋና ዋና እህሎች እስከ ልዩ ምርቶች ድረስ፣ ምርቶቻችን የጋምቤላን ለም አፈር እና ምቹ የአየር ንብረት ምስክር ናቸው።">From staple grains to specialty goods, our products are a testament to Gambela's rich soil and ideal climate.</p>
+                <p class="max-w-2xl mx-auto text-gray-600" data-lang-en="From staple grains to specialty goods, our products are a testament to Gambela's rich soil and ideal climate." data-lang-am="ከዋና ዋና እህሎች እስከ ልዩ ምርቶች ድረስ، ምርቶቻችን የጋምቤላን ለም አፈር እና ምቹ የአየር ንብረት ምስክር ናቸው።">From staple grains to specialty goods, our products are a testament to Gambela's rich soil and ideal climate.</p>
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
                 <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-2">
                     <img src="images/grain-and-seeds.png" alt="Grains and Seeds" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="font-bold text-xl mb-2 text-green-800" data-lang-en="Grains & Seeds" data-lang-am="እህሎች እና ዘሮች">Grains & Seeds</h3>
-                    <p class="text-gray-600" data-lang-en="Hearty maize, versatile sorghum, and nutritious sesame seeds, cultivated for peak flavor and quality." data-lang-am="ለመብል የሚሆን በቆሎ፣ ሁለገብ ማሽላ እና ገንቢ ሰሊጥ፣ ለከፍተኛ ጣዕም እና ጥራት የሚመረቱ።">Hearty maize, versatile sorghum, and nutritious sesame seeds, cultivated for peak flavor and quality.</p>
+                    <p class="text-gray-600" data-lang-en="Hearty maize, versatile sorghum, and nutritious sesame seeds, cultivated for peak flavor and quality." data-lang-am="ለመብል የሚሆን በቆሎ، ሁለገብ ማሽላ እና ገንቢ ሰሊጥ، ለከፍተኛ ጣዕም እና ጥራት የሚመረቱ።">Hearty maize, versatile sorghum, and nutritious sesame seeds, cultivated for peak flavor and quality.</p>
                 </div>
                 <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-2">
                     <img src="images/honey.jpg" alt="Honey and Spices" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="font-bold text-xl mb-2 text-green-800" data-lang-en="Artisanal Goods" data-lang-am="የእደ ጥበብ ውጤቶች">Artisanal Goods</h3>
-                    <p class="text-gray-600" data-lang-en="Pure, raw honey, fiery red pepper, and rich, traditional clarified butter (ghee) for an authentic taste." data-lang-am="ንጹህ፣ ጥሬ ማር፣ እሳታማ ቀይ በርበሬ እና የበለጸገ፣ ባህላዊ የተቀመመ ቅቤ (ንጥር ቅቤ) ለትክክለኛ ጣዕም።">Pure, raw honey, fiery red pepper, and rich, traditional clarified butter (ghee) for an authentic taste.</p>
+                    <p class="text-gray-600" data-lang-en="Pure, raw honey, fiery red pepper, and rich, traditional clarified butter (ghee) for an authentic taste." data-lang-am="ንጹህ، ጥሬ ማር، እሳታማ ቀይ በርበሬ እና የበለጸገ، ባህላዊ የተቀመመ ቅቤ (ንጥር ቅቤ) ለትክክለኛ ጣዕም።">Pure, raw honey, fiery red pepper, and rich, traditional clarified butter (ghee) for an authentic taste.</p>
                 </div>
                 <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-2">
                     <img src="images/goats.webp" alt="Goats" class="w-full h-48 object-cover rounded-lg mb-4">
                     <h3 class="font-bold text-xl mb-2 text-green-800" data-lang-en="Livestock" data-lang-am="የእንስሳት እርባታ">Livestock</h3>
-                    <p class="text-gray-600" data-lang-en="Healthy, free-range goats raised with traditional methods, ensuring premium quality meat." data-lang-am="ጤናማ፣ በግጦሽ ያደጉ ፍየሎች በባህላዊ ዘዴዎች የሚረቡ፣ ከፍተኛ ጥራት ያለው ስጋን ያረጋግጣሉ።">Healthy, free-range goats raised with traditional methods, ensuring premium quality meat.</p>
+                    <p class="text-gray-600" data-lang-en="Healthy, free-range goats raised with traditional methods, ensuring premium quality meat." data-lang-am="ጤናማ، በግጦሽ ያደጉ ፍየሎች በባህላዊ ዘዴዎች የሚረቡ، ከፍተኛ ጥራት ያለው ስጋን ያረጋግጣሉ።">Healthy, free-range goats raised with traditional methods, ensuring premium quality meat.</p>
                 </div>
                 <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-2">
                     <img src="images/maize-field.jpg" alt="Palm Trees" class="w-full h-48 object-cover rounded-lg mb-4">
@@ -195,24 +195,38 @@
                 <h2 class="playfair text-3xl md:text-4xl font-bold text-green-800 mb-4" data-lang-en="A Glimpse of Our World" data-lang-am="የአለማችን እይታ">A Glimpse of Our World</h2>
                 <p class="max-w-2xl mx-auto text-gray-600" data-lang-en="From the sprawling fields to the hands that nurture our crops, see the journey of our products." data-lang-am="ከሰፊው ማሳዎች አንስቶ ሰብሎቻችንን እስከሚንከባከቡ እጆች ድረስ የምርቶቻችንን ጉዞ ይመልከቱ።">From the sprawling fields to the hands that nurture our crops, see the journey of our products.</p>
             </div>
-            <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-                <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/farmer-smiling.jpg" alt="Ethiopian farmer smiling">
-                </div>
-                <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/sorghum-field.jpg" alt="Sorghum field">
-                </div>
-                <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/honey-close.jpg" alt="Close up of honey">
-                </div>
-                <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/grain-and-seeds.png" alt="Sesame seeds">
-                </div>
-                <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/goats.webp" alt="Goats on a farm">
-                </div>
-                 <div>
-                    <img class="h-full w-full object-cover rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300" src="images/maize-field.jpg" alt="Maize field">
+            <div class="max-w-5xl mx-auto">
+                <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3">
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery1.jpg" alt="Gambela farm landscape">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery2.jpg" alt="Local farmers in Gambela">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery3.jpg" alt="Crops being harvested">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery4.jpg" alt="Close-up of grains">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery5.jpg" alt="Farming equipment in field">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery6.jpg" alt="Community gathering">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery7.jpg" alt="Livestock on the farm">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery8.jpg" alt="Sorghum field at sunset">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallery9.jpg" alt="Freshly harvested produce">
+                    </div>
+                    <div class="aspect-square rounded-lg overflow-hidden">
+                        <img class="h-full w-full object-cover shadow-md hover:shadow-xl hover:scale-105 transition-all duration-300" src="images/gallergy10.jpg" alt="Menelik & Family Farming team">
+                    </div>
                 </div>
             </div>
         </section>
@@ -222,10 +236,10 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-left">
                     <h2 class="playfair text-3xl md:text-4xl font-bold text-green-800 mb-6" data-lang-en="Connecting Gambela to the World" data-lang-am="ጋምቤላን ከአለም ጋር ማገናኘት">Connecting Gambela to the World</h2>
-                    <p class="mb-4" data-lang-en="We pride ourselves on our robust and reliable supply chain, ensuring our agricultural products maintain their freshness and quality from our farms in Gambela, Ethiopia to markets across the globe." data-lang-am="ከጋምቤላ፣ ኢትዮጵያ እርሻዎቻችን እስከ አለም ገበያዎች ድረስ የግብርና ምርቶቻችን ትኩስነታቸውን እና ጥራታቸውን እንዲጠብቁ የሚያደርግ ጠንካራ እና አስተማማኝ የአቅርቦት ሰንሰለት አለን።">
+                    <p class="mb-4" data-lang-en="We pride ourselves on our robust and reliable supply chain, ensuring our agricultural products maintain their freshness and quality from our farms in Gambela, Ethiopia to markets across the globe." data-lang-am="ከጋምቤላ، ኢትዮጵያ እርሻዎቻችን እስከ አለም ገበያዎች ድረስ የግብርና ምርቶቻችን ትኩስነታቸውን እና ጥራታቸውን እንዲጠብቁ የሚያደርግ ጠንካራ እና አስተማማኝ የአቅርቦት ሰንሰለት አለን።">
                         We pride ourselves on our robust and reliable supply chain, ensuring our agricultural products maintain their freshness and quality from our farms in Gambela, Ethiopia to markets across the globe.
                     </p>
-                    <p data-lang-en="Our key export hub in Minnesota, USA, serves as a vital link to our North American partners. We manage all logistics to provide a seamless and dependable experience, making the finest Gambelan goods accessible to you." data-lang-am="በአሜሪካ ሚኒሶታ የሚገኘው ዋናው የወጪ ንግድ ማዕከላችን ከሰሜን አሜሪካ አጋሮቻችን ጋር ወሳኝ ግንኙነት ይፈጥራል። እንከን የለሽ እና አስተማማኝ ተሞክሮ ለማቅረብ ሁሉንም የሎጂስቲክስ ስራዎችን እናስተዳድራለን፣ ይህም ምርጥ የጋምቤላ ምርቶችን ለእርስዎ ተደራሽ ያደርጋል።">
+                    <p data-lang-en="Our key export hub in Minnesota, USA, serves as a vital link to our North American partners. We manage all logistics to provide a seamless and dependable experience, making the finest Gambelan goods accessible to you." data-lang-am="በአሜሪካ ሚኒሶታ የሚገኘው ዋናው የወጪ ንግድ ማዕከላችን ከሰሜን አሜሪካ አጋሮቻችን ጋር ወሳኝ ግንኙነት ይፈጥራል። እንከን የለሽ እና አስተማማኝ ተሞክሮ ለማቅረብ ሁሉንም የሎጂስቲክስ ስራዎችን እናስተዳድራለን، ይህም ምርጥ የጋምቤላ ምርቶችን ለእርስዎ ተደራሽ ያደርጋል።">
                         Our key export hub in Minnesota, USA, serves as a vital link to our North American partners. We manage all logistics to provide a seamless and dependable experience, making the finest Gambelan goods accessible to you.
                     </p>
                 </div>
@@ -368,4 +382,5 @@
 
 </body>
 </html>
+
 
