Update header text for clarity and localization improvements

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="bg-white/80 backdrop-blur-md fixed top-0 left-0 right-0 z-50 shadow-sm">
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
-                <a href="#" class="text-xl md:text-2xl font-bold text-green-800" data-lang-en="Menelik & Family Farming" data-lang-am="የምኒልክ እና ቤተሰቡ እርሻ">
+                <a href="#" class="text-xl md:text-2xl font-bold text-green-800" data-lang-en="Menelik & Family Farming Co." data-lang-am="ሚኒሊክ እና ቤተሰቡ እርሻ ልማት ማህበር">
                     Menelik & Family Farming
                 </a>
                 <div class="flex items-center">
@@ -70,7 +70,7 @@
                     </nav>
                      <div class="flex items-center space-x-2 ml-4 border-l pl-4 border-gray-300">
                         <button id="lang-en" class="lang-btn active">EN</button>
-                        <button id="lang-am" class="lang-btn">AM</button>
+                        <button id="lang-am" class="lang-btn">አማ</button>
                     </div>
                     <div class="md:hidden ml-4">
                         <!-- Mobile Menu Button -->
