--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </svg>
                     </div>
                     <h3 class="font-bold text-xl text-green-800">Samuel Assefa Balcha</h3>
-                    <p class="text-gray-500" data-lang-en="Vice Director" data-lang-am="ምክትል ዳይሬክተር">Vice Director</p>
+                    <p class="text-gray-500" data-lang-en="Ddeputy Director" data-lang-am="ምክትል ዳይሬክተር">Vice Director</p>
                 </div>
                 <!-- Team Member Card -->
                 <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 transform hover:-translate-y-1">
@@ -169,8 +169,17 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
                         </svg>
                     </div>
-                    <h3 class="font-bold text-xl text-green-800">Biniyam Ajaw Odol</h3>
+                    <h3 class="font-bold text-xl text-green-800">Ajaw Odol Obang</h3>
                     <p class="text-gray-500" data-lang-en="Operations Lead" data-lang-am="የኦፕሬሽን መሪ">Operations Lead</p>
+                </div>
+                <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 transform hover:-translate-y-1">
+                     <div class="flex items-center justify-center h-16 w-16 bg-green-100 rounded-full mx-auto mb-4">
+                        <svg class="w-8 h-8 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+                        </svg>
+                    </div>
+                    <h3 class="font-bold text-xl text-green-800">Aman Tilahun Merneh</h3>
+                    <p class="text-gray-500" data-lang-en="Finance Admin" data-lang-am="የፋይናንስ መሪ">Finance Admin</p>
                 </div>
             </div>
         </section>
